# FilterReg

./: .gitignore  CMakeLists.txt  README.md  use_gcc6
apps/: CMakeLists.txt
apps/affine_icp/: CMakeLists.txt  main.cpp
apps/cloudproc_app/: CMakeLists.txt  main.cpp
apps/cpd_app/: CMakeLists.txt  main.cpp
apps/feature_registration/: CMakeLists.txt  main.cpp
apps/imgproc_app/: CMakeLists.txt  main.cpp
apps/poser_don/: CMakeLists.txt  estimation.cpp  estimation.h  main.cpp  npy.hpp  parse_request.cpp  parse_request.h  preprocessing.cpp  preprocessing.h
apps/poser_don/data/: 000000_descriptor.npy  descriptor_template.pcd  poser_request.yaml
apps/ransac_app/: CMakeLists.txt  main.cpp
apps/rigid_pt2pl/: CMakeLists.txt  cloud_1.pcd  main.cpp
apps/rigid_pt2pt/: CMakeLists.txt  bunny.pcd  main.cpp
cloudproc/: CMakeLists.txt  cloud_rigid_transform.cpp  cloud_rigid_transform.h  cloud_visibility_projection.cpp  cloud_visibility_projection.h  cloudproc.h  feature_gather.cpp  feature_gather.h  normal_kdtree.cpp  normal_kdtree.h  normal_map_index.cpp  normal_map_index.h  pixel_subsampler_cpu.cpp  pixel_subsampler_cpu.h  subsampler_base.cpp  subsampler_base.h  subsampler_common.cpp  subsampler_common.h  voxel_subsampler_cpu.cpp  voxel_subsampler_cpu.h
cmake/: UtilFunctions.cmake
common/: CMakeLists.txt  blob_access.h  blob_access_test.cpp  common_type.h  data_transfer.cpp  data_transfer.h  feature_channel_type.cpp  feature_channel_type.h  feature_channel_type_test.cpp  feature_map.cpp  feature_map.h  feature_map_test.cpp  feature_proc.h  geometric_target_interface.cpp  geometric_target_interface.h  intrinsic_type.h  macro_copyable.h  safe_call_utils.h  serialize_test.cpp  tensor_access.h  tensor_blob.cpp  tensor_blob.h  tensor_blob_test.cpp  tensor_utils.cpp  tensor_utils.h
corr_search/: CMakeLists.txt  fast_global_registration.cpp  fast_global_registration.h  target_computer_base.cpp  target_computer_base.h  target_reweight.cpp  target_reweight.h
corr_search/gmm/: CMakeLists.txt  gmm.h  gmm_permutohedral_base.h  gmm_permutohedral_base.hpp  gmm_permutohedral_fixedvar_pt2pl.h  gmm_permutohedral_fixedvar_pt2pl.hpp  gmm_permutohedral_fixedvar_pt2pt.h  gmm_permutohedral_fixedvar_pt2pt.hpp  gmm_permutohedral_updatedvar_pt2pl.cpp  gmm_permutohedral_updatedvar_pt2pl.h  gmm_permutohedral_updatedvar_pt2pt.cpp  gmm_permutohedral_updatedvar_pt2pt.h  gmm_permutohedral_updatedvar_withblur.h
corr_search/nn_search/: CMakeLists.txt  nn_pt2pl.cpp  nn_pt2pl.h  nn_pt2pt.cpp  nn_pt2pt.h  nn_search.h  trim_nn_pt2pt.cpp  trim_nn_pt2pt.h
geometry_utils/: CMakeLists.txt  device2eigen.cpp  device2eigen.h  device_mat.cpp  device_mat.h  eigen_pca33.h  kdtree_flann.cpp  kdtree_flann.h  kdtree_flann_test.cpp  permutohedral_common.h  permutohedral_common.hpp  permutohedral_test.cpp  vector_operations.hpp
imgproc/: CMakeLists.txt  depth_bilateral_filter.cpp  depth_bilateral_filter.cu  depth_bilateral_filter.h  frame_loader_base.cpp  frame_loader_base.h  frame_loader_file.cpp  frame_loader_file.h  image_loader_base.cpp  image_loader_base.h  imgproc.h  normal_map_computer.cpp  normal_map_computer.cu  normal_map_computer.h  vertex_map_computer.cpp  vertex_map_computer.cu  vertex_map_computer.h
kinematic/: CMakeLists.txt  kinematic_model_base.cpp  kinematic_model_base.h
kinematic/affine/: CMakeLists.txt  affine.h  affine_geometric_update.cpp  affine_geometric_update.h  affine_kinematic_model.cpp  affine_kinematic_model.h  affine_pt2pt_analytical_cpu.cpp  affine_pt2pt_analytical_cpu.h
kinematic/articulated/: CMakeLists.txt  README.md  articulated_geometric_update.cpp  articulated_geometric_update.h  articulated_kinematic_model.cpp  articulated_kinematic_model.h  articulated_point2point_cpu.cpp  articulated_point2point_cpu.h  articulated_twist2joint.cpp  articulated_twist2joint.h  articulated_twist_jacobian_test.cpp  common_articulated_model.cpp  common_articulated_model.h  twist_point2point_test.cpp
kinematic/cpd/: CMakeLists.txt  README.md  cpd_geometry_update.cpp  cpd_geometry_update.h  cpd_kinematic_model.cpp  cpd_kinematic_model.h  cpd_point2point.cpp  cpd_point2point.h
kinematic/rigid/: CMakeLists.txt  kabsch_test.cpp  rigid.h  rigid_geometric_update.cpp  rigid_geometric_update.h  rigid_kinematic_model.cpp  rigid_kinematic_model.h  rigid_point2plane_cpu.cpp  rigid_point2plane_cpu.h  rigid_point2point_cpu.cpp  rigid_point2point_cpu.h  rigid_point2point_kabsch.cpp  rigid_point2point_kabsch.h
ransac/: CMakeLists.txt  fitness_base.h  fitness_geometry_kdtree.cpp  fitness_geometry_kdtree.h  fitness_geometry_permutohedral.cpp  fitness_geometry_permutohedral.h  fitness_geometry_voxel.cpp  fitness_geometry_voxel.h  hypothesis_evaluate.cpp  hypothesis_evaluate.h  hypothesis_evaluate.hpp  ransac.h  ransac_affine.cpp  ransac_affine.h  ransac_common.cpp  ransac_common.h  ransac_hypothesis.cpp  ransac_hypothesis.h  ransac_rigid.cpp  ransac_rigid.h  so3_sample.cpp  so3_sample.h
visualizer/: CMakeLists.txt  cloud_visualizer_dbg.cpp  debug_visualizer.h  debug_writer.cpp  debug_writer.h  image_visualizer_dbg.cpp
