add_executable(cpd_app main.cpp)
target_link_libraries(cpd_app cpd_kinematic_lib)
target_link_libraries(cpd_app common_lib)
target_link_libraries(cpd_app dbg_visualizer_lib)
target_link_libraries(cpd_app imgproc_lib)
target_link_libraries(cpd_app cloudproc_lib)
target_link_libraries(cpd_app rigid_kinematic_lib)
target_link_libraries(cpd_app nn_search_lib)
target_link_libraries(cpd_app gmm_corr_lib)