add_executable(feature_registration main.cpp)
target_link_libraries(feature_registration common_lib)
target_link_libraries(feature_registration dbg_visualizer_lib)
target_link_libraries(feature_registration imgproc_lib)
target_link_libraries(feature_registration cloudproc_lib)
target_link_libraries(feature_registration rigid_kinematic_lib)
target_link_libraries(feature_registration affine_kinematic_lib)
target_link_libraries(feature_registration nn_search_lib)
target_link_libraries(feature_registration gmm_corr_lib)
target_link_libraries(feature_registration ransac_lib)