add_executable(ransac_app main.cpp)
target_link_libraries(ransac_app common_lib)
target_link_libraries(ransac_app dbg_visualizer_lib)
target_link_libraries(ransac_app imgproc_lib)
target_link_libraries(ransac_app cloudproc_lib)
target_link_libraries(ransac_app rigid_kinematic_lib)
target_link_libraries(ransac_app affine_kinematic_lib)
target_link_libraries(ransac_app nn_search_lib)
target_link_libraries(ransac_app gmm_corr_lib)
target_link_libraries(ransac_app ransac_lib)